--- a/pages/hub.html
+++ b/pages/hub.html
@@ -19,11 +19,12 @@
 
 <body>
   <div id="main">
-    <header class="header">
-      <div class="header__bg__layer"></div>
-      <div class="header__body">
+    <div class="hero-bg">
+    <header class="header__pro">
+      <!-- <div class="header__bg__layer"></div> -->
+      <div class="header__body" style="background-color: white">
         <div class="header_logo">
-          <a href="./index.html"><img src="/assets/img/logo-svg.svg" /></a>
+          <a href="/index.html"><img src="/assets/img/logo-svg.svg" /></a>
         </div>
 
         <div class="header__ham" onclick="toggleanimate()">
@@ -31,18 +32,54 @@
           <div class="nav-bar"></div>
           <div class="nav-bar"></div>
         </div>
+<style>
+  .header__nav a {
+    color: #112791;
+  }
+.header__phone__number__wrap {
+  /* display: flex;
+  flex: 1;
+  justify-content: flex-end; */
+  max-height: 45px;
+  color: #112791;
+}
+.header__phone__number__wrap > :first-child {
+  /* margin-right: 20px; */
+  padding: px 5px;
+}
+.header__phone__number__wrap > a {
+  /* margin-right: 20px; */
+  color: #112791;
+}
+.header__phone__number__wrap {
+  color: #112791;
+  padding: 3px 5px;
+  border-radius: 5px;
+}
+.header__phone__number__wrap {
+  border: 2px solid #112791;
+  padding: 3px 5px;
+  border-radius: 5px;
+}
+</style>
 
         <div class="header__nav">
-          <a href="./pages/index.html" class="header__active">
+          <a href="../index.html">
             <div>Home</div>
           </a>
-          <a href="https://www.academy.motiv8technologies.com/">
+          <a href="./projects.html" class="header__active">
+            <div>Projects</div>
+          </a>
+          <a href="https://academy.motiv8technologies.com">
             <div>Academy</div>
           </a>
-          <a href="./pages/blog.html">
+          <a href="./hub.html">
+            <div>Hubs</div>
+          </a>
+          <a href="./blog.html">
             <div>Blog</div>
           </a>
-          <a href="./pages/about.html">
+          <a href="./about.html">
             <div>About</div>
           </a>
           <div class="header__phone__number__wrap">
@@ -51,6 +88,7 @@
           </div>
         </div>
       </div>
+
     </header>
     <div class="back-drop" onclick="toggleanimate()"></div>
     <main>
@@ -67,17 +105,17 @@
           <h2></h2>
         </div>
         <div class="container-hub-grids">
-          <div class="services" data-aos="fade-up">
+          <div class="hub-services" data-aos="fade-up">
             <img src="/assets/img/hub1.svg" alt="design" />
             <h1>Power Supply</h1>
             <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere sapiente, dolore voluptatem fugit</h5>
           </div>
-          <div class="services" data-aos="fade-up">
+          <div class="hub-services" data-aos="fade-up">
             <img src="/assets/img/hub2.svg" alt="design" />
             <h1>Privacy Focused Work Desks</h1>
             <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere sapiente, dolore voluptatem fugit</h5>
           </div>
-          <div class="services" data-aos="fade-up">
+          <div class="hub-services" data-aos="fade-up">
             <img src="/assets/img/hub3.svg" alt="design" />
             <h1>Fast Internet</h1>
             <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere sapiente, dolore voluptatem fugit</h5>
@@ -89,10 +127,12 @@
         </div>
         <div class="price__plans">
           <div class="price__plans__cards">
-            <h3>N500</h3>
             <h2>Critical WorkSpace</h2>
-
-            <span>Electricity</span>
+            <h3>N500</h3>
+            <div class="bttm">
+            <h4>A comfortable space for you to work your freelance without distraction and noise</h4>
+          </div>
+            <span style="margin-top: 30px;">Electricity</span>
             <span>Work Desk</span>
             <span>No internet</span>
           </div>
