--- a/pages/projects.html
+++ b/pages/projects.html
@@ -11,9 +11,10 @@
   <link type="text/css" href="/assets/css/about.css" rel="stylesheet" />
   <link type="text/css" href="/assets/css/header.css" rel="stylesheet" />
   <link type="text/css" href="/assets/css/footer.css" rel="stylesheet" />
-  <link type="text/css" href="/assets/css/home.css" rel="stylesheet" />
+  <link type="text/css" href="/assets/css/projects.css" rel="stylesheet" />
   <link type="text/css" href="/assets/css/contact.css" rel="stylesheet" />
   <link type="text/css" href="/assets/css/font-awesome.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Helvetica">
   <link rel="stylesheet" type="text/css" href="./assets/css/slick.css" />
   <link rel="stylesheet" type="text/css" href="./assets/css/slick-theme.css" />
   <link rel="stylesheet" href="/assets/css/aos.css" />
@@ -21,21 +22,19 @@
 
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="/assets/js/jquery.min.js"></script>
-  <script src="/assets/js/owl.carousel.min.js"></script>
-  <script src="/assets/js/slick.min.js"></script>
+  <script src="./assets/js/jquery.min.js"></script>
+  <script src="./assets/js/owl.carousel.min.js"></script>
+  <script src="./assets/js/slick.min.js"></script>
 </head>
 
 <body>
   <div id="main">
-    <div class="header__bg__layer"></div>
-    <div class="hero-bg">
-    <header class="header ">
-      
+    <div class="hero-bg"></div>
+    <header class="header__pro">
       <!-- <div class="header__bg__layer"></div> -->
-      <div class="header__body">
+      <div class="header__body" style="background-color: white">
         <div class="header_logo">
-          <a href="/index.html"><img src="./assets/img/logo-svg.svg" /></a>
+          <a href="/index.html"><img src="/assets/img/logo-svg.svg" /></a>
         </div>
 
         <div class="header__ham" onclick="toggleanimate()">
@@ -43,24 +42,53 @@
           <div class="nav-bar"></div>
           <div class="nav-bar"></div>
         </div>
-
+<style>
+  .header__nav a {
+    color: #112791;
+  }
+.header__phone__number__wrap {
+  /* display: flex;
+  flex: 1;
+  justify-content: flex-end; */
+  max-height: 45px;
+  color: #112791;
+}
+.header__phone__number__wrap > :first-child {
+  /* margin-right: 20px; */
+  padding: px 5px;
+}
+.header__phone__number__wrap > a {
+  /* margin-right: 20px; */
+  color: #112791;
+}
+.header__phone__number__wrap {
+  color: #112791;
+  padding: 3px 5px;
+  border-radius: 5px;
+}
+.header__phone__number__wrap {
+  border: 2px solid #112791;
+  padding: 3px 5px;
+  border-radius: 5px;
+}
+</style>
         <div class="header__nav">
-          <a href="./pages/index.html" class="header__active">
+          <a href="./pages/index.html">
             <div>Home</div>
           </a>
-          <a href="./pages/projects.html">
+          <a href="./projects.html" class="header__active">
             <div>Projects</div>
           </a>
           <a href="https://academy.motiv8technologies.com">
             <div>Academy</div>
           </a>
-          <a href="/pages/hub.html">
+          <a href="./hub.html">
             <div>Hubs</div>
           </a>
-          <a href="./pages/blog.html">
+          <a href="./blog.html">
             <div>Blog</div>
           </a>
-          <a href="./pages/about.html">
+          <a href="./about.html">
             <div>About</div>
           </a>
           <div class="header__phone__number__wrap">
@@ -69,121 +97,126 @@
           </div>
         </div>
       </div>
-  
     </header>
     <div class="back-drop" onclick="toggleanimate()"></div>
     <!-- landing page -->
 
-    <section class="home__hero__wrap">
+    <section class="home__hero__wrap__pro">
       <div class="home__hero__text" data-aos="fade-down-right">
-        <h1>Tapping Into Technology To Change Your Business Narrative</h1>
-      </div>
-    
-    </section>
+        <div>
+        <h1>We have a robust team of developers and designers that deliver the best in class software for your business needs.</h1>
+        </div>
+        <button>Get a quote
+           <!-- <svg width="44" height="44" viewBox="0 0 44 44" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M22 0C27.8348 0 33.4306 2.31785 37.5564 6.44365C41.6822 10.5694 44 16.1652 44 22C44 27.8348 41.6822 33.4305 37.5564 37.5563C33.4306 41.6821 27.8348 44 22 44C16.1652 44 10.5695 41.6821 6.44365 37.5563C2.31785 33.4305 0 27.8348 0 22C0 16.1652 2.31785 10.5694 6.44365 6.44365C10.5695 2.31785 16.1652 0 22 0V0ZM12.375 20.625C12.0103 20.625 11.6606 20.7699 11.4027 21.0277C11.1449 21.2856 11 21.6353 11 22C11 22.3647 11.1449 22.7144 11.4027 22.9723C11.6606 23.2301 12.0103 23.375 12.375 23.375H28.3058L22.4015 29.2765C22.1433 29.5347 21.9983 29.8849 21.9983 30.25C21.9983 30.6151 22.1433 30.9653 22.4015 31.2235C22.6597 31.4817 23.0099 31.6267 23.375 31.6267C23.7401 31.6267 24.0903 31.4817 24.3485 31.2235L32.5985 22.9735C32.7265 22.8458 32.8281 22.694 32.8975 22.527C32.9668 22.3599 33.0025 22.1809 33.0025 22C33.0025 21.8191 32.9668 21.6401 32.8975 21.473C32.8281 21.306 32.7265 21.1542 32.5985 21.0265L24.3485 12.7765C24.0903 12.5183 23.7401 12.3733 23.375 12.3733C23.0099 12.3733 22.6597 12.5183 22.4015 12.7765C22.1433 13.0347 21.9983 13.3849 21.9983 13.75C21.9983 14.1151 22.1433 14.4653 22.4015 14.7235L28.3058 20.625H12.375Z"
+            fill="#FF9900" />
+        </svg> -->
+      </button>
 </div>
+</section>
 
     <!--Our Services -->
     <section class="services-section">
       <div class="services__heading">
-        <h2 style="color: black">Our Services</h2>
+        <h2 style="color: black">Our Services & Products</h2>
       </div>
-      <div class="m8-service-grids">
-        <div class="m8__services" data-aos="fade-up" style="background-image: url(/assets/img/projects.jpg); background-size: contain;">
-          <h1>Projects</h1>
+      <div class="container-service-grids">
+        <div class="services" data-aos="fade-up">
+          <img src="/assets/img/result.svg" alt="design" />
+          <h1>Product Branding</h1>
+          <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere sapiente, dolore voluptatem fugit</h5>
+        </div>
+        <div class="services" data-aos="fade-up">
+          <img src="/assets/img/design-icon.svg" alt="design" />
+          <h1>Graphics</h1>
+          <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere sapiente, dolore voluptatem fugit</h5>
+        </div>
+        <div class="services" data-aos="fade-up">
+          <img src="/assets/img/dev-icon.svg" alt="design" />
+          <h1>Web Development</h1>
+          <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere sapiente, dolore voluptatem fugit</h5>
+        </div>
+        <div class="services" data-aos="fade-up">
+          <img src="/assets/img/software-icon.svg" alt="design" />
+          <h1>Mobile Development</h1>
+          <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere sapiente, dolore voluptatem fugit</h5>
+        </div>
+    </section>
+
+
+    <!-- Rapid Production -->
+    <section class="__work__process home__more__value__wrap">
+      <div class="services__heading">
+        <h2>Our Competitive Advantage</h2>
+      </div>
+      <div class="home__more__value__body">
+        <div class="home__more__value__hero" data-aos="fade-down">
+          <img src="/assets/img/more-value.png" />
+        </div>
+
+        <div class="home__more__value__content" data-aos="fade-down-right">
+          <h4>
+            Our digital services and products can drive more value Into your
+            business for growth and service delivery
+          </h4>
+
+          <div class="home__more__value__content__item">
+            <img src="/assets/img/mark-icon.svg" />
+            <p>Elegant and easy to use Applications</p>
+          </div>
+
+          <div class="home__more__value__content__item">
+            <img src="/assets/img/mark-icon.svg" />
+            <p>Connect with your customers</p>
+          </div>
+
+          <div class="home__more__value__content__item">
+            <img src="/assets/img/mark-icon.svg" />
+            <p>
+              Strategic competitive advantage
+              <!--for your business-->
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="home__portfolio__wrap">
+      <div class="services__heading">
+        <h2>Our Portfolio</h2>
+      </div>
+
+      <div class="container-4-service-grids">
+        <div class="service" style="background: url(/assets/img/blecyn.png);">
+          <h1 style="color: black;">Blecyn</h1>
           <div class="overlay">
             <div class="reverse_colors">
-              <h2>Motiv8 Projects</h2>
+              <h1>Product Branding</h1>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, repudiandae numquam reiciendis.</p>
             </div>
           </div>
+        </div>
+        <div class="service" style="background: url(/assets/img/cybersecfill.png);">
+          <h1>CyberSecFill</h1>
+          <div class="overlay">
+            <div class="reverse_colors" style="background-color: #3E8A2F;">
+              <h1>Graphics</h1>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, repudiandae numquam reiciendis.</p>
+            </div>
           </div>
-          <div class="m8__services" data-aos="fade-up" style="background-image: url(/assets/img/academy.jpg); background-size: contain;">
-            <h1>Motiv8 Academy</h1>
-            <div class="overlay">
-              <div class="reverse_colors">
-                <h2>Motiv8 Academy</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, repudiandae numquam reiciendis.</p>
-              </div>
-            </div>
-            </div>
-            <div class="m8__services" data-aos="fade-up" style="background-image: url(/assets/img/hub.png); background-size: contain;">
-              <h1>Hub & Workspaces</h1>
-              <div class="overlay">
-                <div class="reverse_colors">
-                  <h2>Hub & Workspaces</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, repudiandae numquam reiciendis.</p>
-                </div>
-              </div>
-              </div>
-    </section>
-    <!-- work process start -->
-    <section class="home__section__work__process" style="background: url(/assets/img/bg.png);">
-      <div class="work__process__heading">
-        <h2> <svg width="88" height="88" viewBox="0 0 88 88" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M16.1734 55.1797L17.4201 49.6302L13.1484 45.8719L16.0488 40.9769L13.1503 36.0855L17.4183 32.3272L16.1734 26.7777L21.3966 24.5227L21.9264 18.8577L27.5896 18.326L29.8446 13.1047L35.3941 14.3514L39.1524 10.0834L44.0456 12.9819L48.9388 10.0834L52.6971 14.3532L58.2466 13.1084L60.4998 18.3297L66.1629 18.8614L66.6946 24.5264L71.9159 26.7814L70.6693 32.329L74.9409 36.0874L72.0406 40.9824L74.9391 45.8755L70.6693 49.6339L71.9159 55.1834"
-              stroke="white" stroke-width="1.83333" stroke-linecap="round" stroke-linejoin="round" />
-            <path
-              d="M44.0447 15.9207L35.6114 28.2297L21.2985 32.4482L30.3974 44.275L29.9867 59.191L44.0447 54.1933L58.1045 59.1928L57.6939 44.275L66.7927 32.4482L52.4799 28.2278L44.0447 15.9207ZM21.5717 59.312C21.5717 59.312 29.3212 67.639 44.0465 67.639C58.7719 67.639 66.5287 59.2093 66.5287 59.2093L21.5717 59.312ZM35.2924 75.7588C30.1352 74.7239 25.2329 72.6816 20.8663 69.749C16.4997 66.8163 12.7547 63.0509 9.8457 58.6685L13.9322 60.28L13.5105 56.2448C13.5105 56.2448 19.7952 67.9085 37.3622 71.6082C40.4972 72.677 37.551 76.164 35.2905 75.7588H35.2924Z"
-              stroke="white" stroke-width="1.83333" stroke-linecap="round" stroke-linejoin="round" />
-            <path
-              d="M19.4204 63.041L21.5709 59.312C21.5709 59.312 29.3222 67.6408 44.0457 67.6408C58.7692 67.6408 66.4289 59.312 66.4289 59.312"
-              stroke="white" stroke-width="1.83333" stroke-linecap="round" stroke-linejoin="round" />
-            <path
-              d="M35.2924 75.7586C30.1352 74.7237 25.2329 72.6814 20.8663 69.7488C16.4997 66.8161 12.7547 63.0507 9.8457 58.6683L13.9322 60.2798L13.5105 56.2446C13.5105 56.2446 19.7952 67.9083 37.3622 71.608C40.4972 72.6768 37.551 76.1638 35.2905 75.7586H35.2924Z"
-              stroke="white" stroke-width="1.83333" stroke-linecap="round" stroke-linejoin="round" />
-            <path d="M19.4204 63.041L21.5709 59.312C21.5709 59.312 29.3222 67.6408 44.0457 67.6408" stroke="white"
-              stroke-width="1.83333" stroke-linecap="round" stroke-linejoin="round" />
-            <path
-              d="M35.2924 75.7586C30.1352 74.7237 25.2329 72.6814 20.8663 69.7488C16.4997 66.8161 12.7547 63.0507 9.8457 58.6683L13.9322 60.2798L13.5105 56.2446C13.5105 56.2446 19.7952 67.9083 37.3622 71.608C40.4972 72.6768 37.551 76.1638 35.2905 75.7586H35.2924ZM68.5802 63.0408L66.4297 59.3118L68.5802 63.0408ZM52.709 75.7586C57.8664 74.7235 62.7688 72.6809 67.1354 69.7479C71.502 66.8149 75.2469 63.0492 78.1557 58.6665L74.071 60.2798L74.4927 56.2446C74.4927 56.2446 68.208 67.9083 50.641 71.608C47.506 72.6768 50.4504 76.1638 52.7127 75.7586H52.709Z"
-              stroke="white" stroke-width="1.83333" stroke-linecap="round" stroke-linejoin="round" />
-            <path
-              d="M44.0456 48.477C48.8935 48.477 52.8236 44.547 52.8236 39.699C52.8236 34.8511 48.8935 30.921 44.0456 30.921C39.1976 30.921 35.2676 34.8511 35.2676 39.699C35.2676 44.547 39.1976 48.477 44.0456 48.477Z"
-              stroke="white" stroke-width="1.83333" stroke-linecap="round" stroke-linejoin="round" />
-            <path
-              d="M36.2642 62.4929H51.8237M37.3605 71.6064C41.7419 72.4918 46.2561 72.4918 50.6375 71.6064H37.3605ZM44.0448 54.1934V77.9167V54.1934Z"
-              stroke="white" stroke-width="1.83333" stroke-linecap="round" stroke-linejoin="round" />
-            <path
-              d="M44.0452 53.8632C51.8679 53.8632 58.2095 47.5216 58.2095 39.6989C58.2095 31.8761 51.8679 25.5345 44.0452 25.5345C36.2224 25.5345 29.8809 31.8761 29.8809 39.6989C29.8809 47.5216 36.2224 53.8632 44.0452 53.8632Z"
-              stroke="white" stroke-width="1.83333" stroke-linecap="round" stroke-linejoin="round" />
-          </svg>
-          Our Work Process</h2>
-      </div>
-      <div class="work__process__content" data-aos="fade-up" >
-        <div>
-            <h4 style="color: white;"> We archieve the best quality possible with a blend of Planning and Design, Intense Development, Fast Delivery & Maintenance</h4>
-              <div>
-                <button>Get a Quote <svg width="44" height="44" viewBox="0 0 44 44" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path
-                      d="M22 0C27.8348 0 33.4306 2.31785 37.5564 6.44365C41.6822 10.5694 44 16.1652 44 22C44 27.8348 41.6822 33.4305 37.5564 37.5563C33.4306 41.6821 27.8348 44 22 44C16.1652 44 10.5695 41.6821 6.44365 37.5563C2.31785 33.4305 0 27.8348 0 22C0 16.1652 2.31785 10.5694 6.44365 6.44365C10.5695 2.31785 16.1652 0 22 0V0ZM12.375 20.625C12.0103 20.625 11.6606 20.7699 11.4027 21.0277C11.1449 21.2856 11 21.6353 11 22C11 22.3647 11.1449 22.7144 11.4027 22.9723C11.6606 23.2301 12.0103 23.375 12.375 23.375H28.3058L22.4015 29.2765C22.1433 29.5347 21.9983 29.8849 21.9983 30.25C21.9983 30.6151 22.1433 30.9653 22.4015 31.2235C22.6597 31.4817 23.0099 31.6267 23.375 31.6267C23.7401 31.6267 24.0903 31.4817 24.3485 31.2235L32.5985 22.9735C32.7265 22.8458 32.8281 22.694 32.8975 22.527C32.9668 22.3599 33.0025 22.1809 33.0025 22C33.0025 21.8191 32.9668 21.6401 32.8975 21.473C32.8281 21.306 32.7265 21.1542 32.5985 21.0265L24.3485 12.7765C24.0903 12.5183 23.7401 12.3733 23.375 12.3733C23.0099 12.3733 22.6597 12.5183 22.4015 12.7765C22.1433 13.0347 21.9983 13.3849 21.9983 13.75C21.9983 14.1151 22.1433 14.4653 22.4015 14.7235L28.3058 20.625H12.375Z"
-                      fill="#0F2391" />
-                  </svg>
-                </button>
-              </div>
-
         </div>
-        <div>
-          <img src="/assets/img/work_process.svg" data-aos="fade-up" />
+        <div class="service" style="background: url(/assets/img/velma_arc.png);">
+          <h1>Velma ARC</h1>
+          <div class="overlay">
+            <div class="reverse_colors">
+              <h1>Web Development</h1>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, repudiandae numquam reiciendis.</p>
+            </div>
+          </div>
         </div>
 
-      </div>
-
-
-    </section>
-
-
-    <!-- trust us brands -->
-    <section class="brands__banner">
-      <div class="services__heading">
-        <h2>Clients & Partners</h2>
-      </div>
-      <div class="grid__brands">
-        <img src="/assets/img/velma logo.png" />
-        <img src="/assets/img/cybersecfill logo.png" />
-        <img src="/assets/img/neyda logo.png" />
-        <img src="/assets/img/marbills-removebg-preview.png" />
-      </div>
     </section>
     </section>
        <!-- Modal Background and Modal -->
@@ -330,7 +363,7 @@
         </div>
       </section>
     </footer>
-  </div>
+
 </body>
 <script language="javascript" src="./assets/js/hamnav.js"></script>
 <script type="text/javascript" src="../assets/js/contact.js"></script>
