--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
       <div class="home__hero__text" data-aos="fade-down-right">
         <h1>Tapping Into Technology To Change Your Business Narrative</h1>
       </div>
-    
+
     </section>
-</div>
+
 
     <!--Our Services -->
     <section class="services-section">
@@ -183,6 +183,7 @@
         <img src="/assets/img/cybersecfill logo.png" />
         <img src="/assets/img/neyda logo.png" />
         <img src="/assets/img/marbills-removebg-preview.png" />
+        <img src="/assets/img/blecyn-logo.png" />
       </div>
     </section>
     </section>
