--- a/pages/hub.html
+++ b/pages/hub.html
@@ -94,12 +94,14 @@
     <main>
       <section class="hub__hero__wrap">
         <div class="hub__hero__text" data-aos="fade-down-right">
+    
           <h1>Motiv8 Hub & Workspaces</h1>
-          <p style="font-family: Readex Pro; font-weight: lighter;">
-            Reliable Service
-          </p>
         </div>
       </section>
+      <!-- <section class="hub__hero">
+        <h2>Uninterrupted Electricity, Superfast Internet Connectivity, Printing Services and Tech support at your fingertips for almost Free</h2>
+        <img src="/assets/img/hub.png"/>
+      </section> -->
       <section class="services-section" style="background: white;">
         <div class="services__heading">
           <h2></h2>
