--- a/pages/projects.html
+++ b/pages/projects.html
@@ -19,8 +19,6 @@
   <link rel="stylesheet" type="text/css" href="./assets/css/slick-theme.css" />
   <link rel="stylesheet" href="/assets/css/aos.css" />
   <link rel="stylesheet" href="/assets/css/responcive.css" />
-
-
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="./assets/js/jquery.min.js"></script>
   <script src="./assets/js/owl.carousel.min.js"></script>
@@ -187,34 +185,21 @@
       <div class="services__heading">
         <h2>Our Portfolio</h2>
       </div>
-
       <div class="container-4-service-grids">
-        <div class="service" style="background: url(/assets/img/blecyn.png);">
-          <h1 style="color: black;">Blecyn</h1>
-          <div class="overlay">
-            <div class="reverse_colors">
-              <h1>Product Branding</h1>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, repudiandae numquam reiciendis.</p>
-            </div>
-          </div>
+        <div class="service" >
+          <img src="/assets/img/blecyn.png"/>
+          <h1>Blecyn</h1>
+          <h3>Branding</h3>
         </div>
-        <div class="service" style="background: url(/assets/img/cybersecfill.png);">
-          <h1>CyberSecFill</h1>
-          <div class="overlay">
-            <div class="reverse_colors" style="background-color: #3E8A2F;">
-              <h1>Graphics</h1>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, repudiandae numquam reiciendis.</p>
-            </div>
-          </div>
+        <div class="service" >
+          <img src="/assets/img/cybersecfill.png"/>
+          <h1>Cybersecfill</h1>
+          <h3>Branding</h3>
         </div>
-        <div class="service" style="background: url(/assets/img/velma_arc.png);">
-          <h1>Velma ARC</h1>
-          <div class="overlay">
-            <div class="reverse_colors">
-              <h1>Web Development</h1>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, repudiandae numquam reiciendis.</p>
-            </div>
-          </div>
+        <div class="service" >
+          <img src="/assets/img/velma_arc.png"/>
+          <h1>Velma</h1>
+          <h3>Branding</h3>
         </div>
 
     </section>
